--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ android {
         }
     }
 
+    packagingOptions {
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
+
 }
 
 dependencies {
@@ -32,6 +38,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.squareup.okio:okio:1.6.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
 
     compile('com.github.afollestad.material-dialogs:core:0.8.5.0@aar') {
         transitive = true
