--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,10 @@ android {
         exclude 'META-INF/NOTICE'
     }
 
+
+
 }
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -39,6 +42,7 @@ dependencies {
     compile 'com.squareup.okio:okio:1.6.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+    compile "com.splunk.mint:mint:5.0.0"
 
     compile('com.github.afollestad.material-dialogs:core:0.8.5.0@aar') {
         transitive = true
