--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
-        <service android:name="com.nju.service.RecommendWorkIntentService"
+        <service android:name="com.nju.service.CacheIntentService"
              android:exported="false"
             />
     </application>
