--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,15 +24,13 @@ android {
     }
 
     packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
     }
 
-
-
 }
-
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -44,7 +42,6 @@ dependencies {
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile 'com.splunk.mint:mint:5.0.0'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.jakewharton:disklrucache:2.0.2'
     compile('com.github.afollestad.material-dialogs:core:0.8.5.0@aar') {
         transitive = true
     }
@@ -56,8 +53,7 @@ dependencies {
     }
     compile files('libs/TencentLocationSDK_v4.3.0_r196568_151014_1433.jar')
     compile files('libs/gson-2.5.jar')
-    compile files('libs/mail.jar')
-    compile files('libs/additionnal.jar')
-    compile files('libs/activation.jar')
     compile files('libs/libammsdk.jar')
+
+
 }
